# fumen_image_generator

./: .env  Cargo.toml
src/: image.rs  main.rs
templates/: template.html
website/: index.html  style.css
